# xenonium-engine

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  NAMING_CONVENTIONS.md  README.md
TestGame/: CMakeLists.txt
TestGame/src/: main.cpp
TestXEM/: .clang-format  CMakeLists.txt
TestXEM/src/: main.cpp
XEM/: CMakeLists.txt
XEM/include/xem/: General.hpp  Mat.hpp  Qualifier.hpp  Vec.hpp  VecMath.hpp  XEM.hpp
XEM/src/: Qualifier.hpp  Vec.hpp  VecMath.hpp  XEM.hpp
XEM/src/test/: VecTest.cpp
XEM/src/xemtest/: Tests.hpp  VecTest.cpp  XEMTEST.hpp
Xenonium/: CMakeLists.txt
Xenonium/dependencies/glad/: glad.h
Xenonium/src/: EntryPoint.hpp  Xenonium.hpp  XenoniumAPI.hpp
Xenonium/src/core/: Game.cpp  Game.hpp  Logger.cpp  Logger.hpp
Xenonium/src/native/: glad.c
Xenonium/src/renderer/: OpenGLRenderer.cpp  OpenGLRenderer.hpp  Renderer.cpp  Renderer.hpp  Sprite.hpp  TextureAtlas.hpp  UvInfo.hpp
Xenonium/src/window/: InputManager.cpp  InputManager.hpp  Window.cpp  Window.hpp
